Use the internal Classfile API