@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
     <build>
@@ -19,15 +19,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.0</version>
+                <version>3.10.1</version>
                 <configuration>
                     <compilerArgs>
                         <arg>
-                            --add-exports=java.base/jdk.internal.org.objectweb.asm=dev.thihup.holy.agent
+                            --add-exports=java.base/jdk.internal.classfile=dev.thihup.holy.agent
                         </arg>
                         <arg>
-                            --add-exports=java.base/jdk.internal.org.objectweb.asm.commons=dev.thihup.holy.agent
+                            --add-exports=java.base/jdk.internal.classfile.components=dev.thihup.holy.agent
                         </arg>
+                        <arg>
+                            --add-exports=java.base/jdk.internal.classfile.constantpool=dev.thihup.holy.agent
+                        </arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
